--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
         "laravel/ui": "1.2.0",
+        "spatie/laravel-permission": "^3.11",
         "tymon/jwt-auth": "1.0.0-rc.5.1"
     },
     "require-dev": {
